# free_ai

./: .gitignore  Cargo.toml  README.md
webui/: Cargo.toml  check.sh  index.html
webui/src/: main.rs
webui/src/app/: mod.rs
webui/src/app/common/: config.rs  fonts.rs  mod.rs
webui/src/app/mode/: chat_mode.rs  mod.rs
webui/src/app/module/: mod.rs
webui/src/infra/platform/: macos.rs  mod.rs
