[workspace]
members = ["webui"]
workspace.resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Teshin <1443965173@qq.com>"]
repository = "https://github.com/woshihaoren4/free_ai"
keywords = ["free_ai"]
description = "free_ai"
license = "Apache-2.0"
readme = "README.md"

[workspace.dependencies]
wd_log = "0.4.0"
wd_tools = {version="0.14.10",features = ["full"]}
anyhow = "1.0.100"
serde = {version = "1.0.228",features = ["derive"]}
serde_json = "1.0.118"

